Kubernetes/15 Ingress/files/service3.yaml
kind: Pod
apiVersion: v1
metadata:
  name: service3-app
  labels:
    app: service3
spec:
  containers:
    - name: service3-app
      image: hashicorp/http-echo
      args:
        - "-text=service3"

---

kind: Service
apiVersion: v1
metadata:
  name: service3-service
spec:
  selector:
    app: service3
  ports:
    - port: 5678 # Default port for image
